--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
+    "firebase": "^11.1.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
